--- a/mike's stuff/Pixie/Base.lproj/Main.storyboard
+++ b/mike's stuff/Pixie/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="WGR-7L-PRe">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="AfR-vh-qoH">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
@@ -231,7 +231,7 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="kcL-g0-2cZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <exit id="Ru2-Gb-nj1" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="-188" y="60"/>
+            <point key="canvasLocation" x="624" y="60"/>
         </scene>
         <!--SearchViewController-->
         <scene sceneID="ufC-wZ-h7g">
@@ -309,7 +309,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="814" y="-259"/>
+            <point key="canvasLocation" x="1626" y="-259"/>
         </scene>
         <!--MatchesViewController-->
         <scene sceneID="NPY-cc-Iaf">
@@ -503,7 +503,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="top" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="PIXIe" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="B2k-LN-2YF">
-                                <rect key="frame" x="183" y="91" width="235" height="73"/>
+                                <rect key="frame" x="183.5" y="91" width="234.5" height="73"/>
                                 <fontDescription key="fontDescription" name="Syncopate-Regular" family="Syncopate" pointSize="75"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
@@ -539,6 +539,7 @@
                             <constraint firstAttribute="bottom" secondItem="WYI-0U-HP2" secondAttribute="bottom" constant="20" symbolic="YES" id="ukw-2l-4Ky"/>
                         </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="9tv-47-bsg"/>
                     <simulatedStatusBarMetrics key="simulatedStatusBarMetrics" statusBarStyle="lightContent"/>
                     <connections>
                         <outlet property="registerBtn" destination="vCD-i4-wqh" id="Fd0-tz-KDt"/>
@@ -548,7 +549,7 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Rod-uQ-vPG" sceneMemberID="firstResponder"/>
                 <exit id="YSt-SD-BMQ" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="-1231" y="-235"/>
+            <point key="canvasLocation" x="-419" y="-235"/>
         </scene>
         <!--SignInViewController-->
         <scene sceneID="zg9-Na-H50">
@@ -728,7 +729,7 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="9A2-My-t4E" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <exit id="pUq-r8-9MU" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="-196" y="-691"/>
+            <point key="canvasLocation" x="616" y="-691"/>
         </scene>
         <!--Navigation View Controller-->
         <scene sceneID="hH8-u9-3WS">
@@ -844,7 +845,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="gBX-1g-wYc" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1662" y="-251"/>
+            <point key="canvasLocation" x="2474" y="-251"/>
         </scene>
         <!--AboutViewController-->
         <scene sceneID="VWP-Cm-U3n">
@@ -906,7 +907,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="1dg-UK-nrU" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2505" y="-425"/>
+            <point key="canvasLocation" x="3317" y="-425"/>
         </scene>
         <!--ProfileViewController-->
         <scene sceneID="hJT-Xe-qRX">
@@ -1368,6 +1369,26 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="uW8-Oz-Ylu" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1715" y="1757"/>
+        </scene>
+        <!--InitialNavVC-->
+        <scene sceneID="DBM-qY-3ye">
+            <objects>
+                <navigationController title="InitialNavVC" automaticallyAdjustsScrollViewInsets="NO" navigationBarHidden="YES" id="AfR-vh-qoH" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <nil key="simulatedStatusBarMetrics"/>
+                    <nil key="simulatedTopBarMetrics"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="GRk-3y-QeM">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="WGR-7L-PRe" kind="relationship" relationship="rootViewController" id="s8v-K4-cjx"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="myE-i0-O7c" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1231" y="-235"/>
         </scene>
     </scenes>
     <resources>
