log in persistence: check, video background unbugged: check, mike's a beast: mother fuck yeah

--- a/mike's stuff/Pixie/Base.lproj/Main.storyboard
+++ b/mike's stuff/Pixie/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="4nK-df-J8u">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="WGR-7L-PRe">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
@@ -277,8 +277,8 @@
                                     <outlet property="delegate" destination="vXZ-lx-hvc" id="S4g-3V-9hp"/>
                                 </connections>
                             </searchBar>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="m9q-h8-tBS">
-                                <rect key="frame" x="0.0" y="322" width="600" height="278"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="m9q-h8-tBS">
+                                <rect key="frame" x="0.0" y="322" width="600" height="229"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             </tableView>
                         </subviews>
@@ -544,6 +544,7 @@
                     <connections>
                         <outlet property="registerBtn" destination="vCD-i4-wqh" id="Fd0-tz-KDt"/>
                         <outlet property="signInBtn" destination="WYI-0U-HP2" id="DHU-UP-5OX"/>
+                        <segue destination="vXZ-lx-hvc" kind="show" identifier="loggedSearch" id="DAt-Tu-EYX"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Rod-uQ-vPG" sceneMemberID="firstResponder"/>
@@ -554,8 +555,6 @@
         <!--SignInViewController-->
         <scene sceneID="zg9-Na-H50">
             <objects>
-                <exit id="pUq-r8-9MU" userLabel="Exit" sceneMemberID="exit"/>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="9A2-My-t4E" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <viewController title="SignInViewController" id="8uD-2E-CAb" customClass="SignInViewController" customModule="Pixie" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="sA9-xb-1Rt"/>
@@ -608,13 +607,13 @@
                                 </constraints>
                             </view>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="or" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0Xp-u6-ccb">
-                                <rect key="frame" x="291" y="127" width="18" height="31"/>
+                                <rect key="frame" x="291" y="127" width="18" height="26"/>
                                 <fontDescription key="fontDescription" name="HelveticaNeue-ThinItalic" family="Helvetica Neue" pointSize="22"/>
                                 <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="fuq-aV-5ed">
-                                <rect key="frame" x="16" y="166" width="568" height="114"/>
+                                <rect key="frame" x="16" y="161" width="568" height="114"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="EpG-f3-Bba">
                                         <rect key="frame" x="8" y="61" width="505" height="45"/>
@@ -719,7 +718,7 @@
                                 </constraints>
                             </view>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OtV-uL-Xdv">
-                                <rect key="frame" x="183" y="291" width="235" height="17"/>
+                                <rect key="frame" x="193.5" y="286" width="214.5" height="17"/>
                                 <attributedString key="attributedText">
                                     <fragment content="Ruh roh, wrong email and password.">
                                         <attributes>
@@ -765,6 +764,8 @@
                         <segue destination="vXZ-lx-hvc" kind="show" identifier="presentSearch" id="vwa-0O-sBD"/>
                     </connections>
                 </viewController>
+                <exit id="pUq-r8-9MU" userLabel="Exit" sceneMemberID="exit"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="9A2-My-t4E" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1428" y="-691"/>
         </scene>
@@ -1407,34 +1408,14 @@
             </objects>
             <point key="canvasLocation" x="1715" y="1757"/>
         </scene>
-        <!--InitNavVC-->
-        <scene sceneID="qYY-7u-trO">
-            <objects>
-                <navigationController title="InitNavVC" automaticallyAdjustsScrollViewInsets="NO" navigationBarHidden="YES" id="4nK-df-J8u" sceneMemberID="viewController">
-                    <toolbarItems/>
-                    <simulatedStatusBarMetrics key="simulatedStatusBarMetrics" statusBarStyle="lightContent"/>
-                    <nil key="simulatedTopBarMetrics"/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="yQ4-5C-NYf">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                    <nil name="viewControllers"/>
-                    <connections>
-                        <segue destination="WGR-7L-PRe" kind="relationship" relationship="rootViewController" id="VYN-Ff-hSB"/>
-                    </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="Uwb-VM-Mkc" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-419" y="-235"/>
-        </scene>
     </scenes>
     <resources>
         <image name="add" width="30" height="30"/>
         <image name="menu" width="22" height="22"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="dLk-Tp-hyc"/>
+        <segue reference="DAt-Tu-EYX"/>
+        <segue reference="ndH-hG-Xoc"/>
         <segue reference="Ntf-EL-NHY"/>
-        <segue reference="rDY-9Y-l7X"/>
     </inferredMetricsTieBreakers>
 </document>
